# Social-Streaming-Application

./: .env.kafka  .gitignore  Dockerfile.kafka  Dockerfile.prefect-worker  Dockerfile.spark  LICENSE  README.md  docker-compose.yml  export_from_milvus.py  load_to_milvus.py  output.txt  pyproject.toml  requirements-spark.txt  requirements.txt  script_code.sh  vector_search.py
data/processed/: .part-00000-6c0c5c0e-e6f2-49c2-9fe7-c721de508f32-c000.json.crc  part-00000-6c0c5c0e-e6f2-49c2-9fe7-c721de508f32-c000.json
docs/: RUN.md  RUN_UPDATE.md  docs.md
jmx_exporter/: spark.yml
milvus_data/rmq/: 000439.sst  000443.sst  000449.sst  000455.sst  IDENTITY  LOG  LOG.old.1760180135445634  LOG.old.1760180214673216  LOG.old.1760180289967917  LOG.old.1760180365149828  LOG.old.1760180439603283  LOG.old.1760180514218627  LOG.old.1760180590550012  LOG.old.1760180666562852  LOG.old.1760180741259277  LOG.old.1760180815792582  LOG.old.1760180891498399  LOG.old.1760180965896673  LOG.old.1760181040854076  LOG.old.1760181115462197  LOG.old.1760181191299694  LOG.old.1760181265808714  LOG.old.1760181341012465  LOG.old.1760181415496143  LOG.old.1760181490228330  LOG.old.1760181565296332  LOG.old.1760181642912880  LOG.old.1760181717598112  LOG.old.1760181793935801  LOG.old.1760181868771807  LOG.old.1760181943362410  LOG.old.1760182018116196  LOG.old.1760182092604478  LOG.old.1760182169343555  LOG.old.1760182243990397  LOG.old.1760182318415061  LOG.old.1760182394075137  LOG.old.1760182468969234  LOG.old.1760182543615236  (+35 more)
src/: flow.py  inject.py  main.py  main_kafka.py
src/task/: reddit.py
(+94 files in other folders)
