[project]
name = "big-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka",
    "elasticsearch",
    "keybert",
    "loguru",
    "praw",
    "prefect",
    "pydantic",
    "pydantic-settings",
    "pyspark==4.0.1",
    "requests",
    "tenacity",
    "elasticsearch==8.13.0"
]
